--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "nome": "Aula:  Desenhando no SVG no HTML 5",
+    "nome": "Aula: Desenhando com SVG no HTML5",
     "academico":{
         "curso": "Autoração Multimídia II",
         "cursoIcone": "layout/icones/banner_henrique.svg",
